--- a/views/pomps/pomp2.html
+++ b/views/pomps/pomp2.html
@@ -66,25 +66,25 @@
                         <div class="col-sm-3 m-b-20">
                             <div class="form-group fg-line">
                                 <label>WYDAJNOSC</label>
-                                <input type="text" class="form-control ng-isolate-scope bgm-none" ng-model="modelState.ml_per_sec" placeholder="Wydajnośc ml/s" data-input-mask="{mask: '0.0'}" maxlength="3" autocomplete="off">
+                                <input type="number" class="form-control ng-isolate-scope bgm-none" ng-model="modelState.ml_per_sec" placeholder="Wydajnośc ml/s" autocomplete="off">
                             </div>
                         </div>
                         <div class="col-sm-3 m-b-20">
                             <div class="form-group fg-line">
                                 <label>POJEMNOSC</label>
-                                <input type="text" class="form-control ng-isolate-scope bgm-none" placeholder="POJEMNOSC" ng-model="modelState.capacity" data-input-mask="{mask: '0000'}" maxlength="4" autocomplete="off">
+                                <input type="number" class="form-control ng-isolate-scope bgm-none" placeholder="POJEMNOSC" ng-model="modelState.capacity" autocomplete="off">
                             </div>
                         </div>
                         <div class="col-sm-3 m-b-20">
                             <div class="form-group fg-line">
                                 <label>STAN</label>
-                                <input type="text" disabled class="form-control ng-isolate-scope bgm-none" placeholder="STAN" ng-model="modelState.state">
+                                <input type="number" disabled class="form-control ng-isolate-scope bgm-none" placeholder="STAN" ng-model="modelState.state">
                             </div>
                         </div>
                         <div class="col-sm-3 m-b-20">
                             <div class="form-group fg-line">
                                 <label>PROCENT</label>
-                                <input type="text" disabled class="form-control ng-isolate-scope bgm-none" placeholder="PROCENT" ng-model="modelState.percent">
+                                <input type="number" disabled class="form-control ng-isolate-scope bgm-none" placeholder="PROCENT" ng-model="modelState.percent">
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                         <div class="col-xs-12 col-sm-12 m-t-10">
                             <div class="form-group fg-line">
                                 <label>DAWKA</label>
-                                <input type="text" class="form-control ng-isolate-scope bgm-none" ng-model="modelDose" placeholder="Dawka" data-input-mask="{mask: '00.0'}" maxlength="3" autocomplete="off">
+                                <input type="number" class="form-control ng-isolate-scope bgm-none" ng-model="modelDose" placeholder="Dawka" autocomplete="off">
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 m-t-10">
