--- a/views/lamps/lamp1.html
+++ b/views/lamps/lamp1.html
@@ -35,8 +35,17 @@
                                     <div class="col-xs-6 col-sm-3 text-center p-t-10">
                                         <label>CZAS</label>
                                     </div>
-                                    <div class="col-xs-6 col-sm-3 text-center p-t-10">
-                                        <label>PROCENT</label>
+                                    <div class="col-xs-1 col-sm-1 text-center p-t-10">
+                                        <label>KANAL 1</label>
+                                    </div>
+                                    <div class="col-xs-1 col-sm-1 text-center p-t-10">
+                                        <label>KANAL 2</label>
+                                    </div>
+                                    <div class="col-xs-1 col-sm-1 text-center p-t-10">
+                                        <label>KANAL 3</label>
+                                    </div>
+                                    <div class="col-xs-1 col-sm-1 text-center p-t-10">
+                                        <label>KANAL 4</label>
                                     </div>
                                     <div class="col-md-1">
                                         <button class="btn btn-primary bgm-green  waves-effect" ng-click="addState(day)"><i class="zmdi zmdi-plus"></i></button>
@@ -49,9 +58,19 @@
                                     <div class="col-md-3">
                                         <input type="text" class="form-control text-center bgm-none" placeholder="CZAS" ng-model="state.time" autocomplete="off">
                                     </div>
-                                    <div class="col-md-3">
-                                        <input type="text" class="form-control text-center bgm-none" placeholder="PROCENT" ng-model="state.percent" data-input-mask="{mask: '000'}" maxlength="3" autocomplete="off">
+                                    <div class="col-md-1">
+                                        <input type="number" class="form-control text-center bgm-none" placeholder="PROCENT" ng-model="state.percent[0]" autocomplete="off">
                                     </div>
+                                    <div class="col-md-1">
+                                        <input type="number" class="form-control text-center bgm-none" placeholder="PROCENT" ng-model="state.percent[1]" autocomplete="off">
+                                    </div>
+                                    <div class="col-md-1">
+                                        <input type="number" class="form-control text-center bgm-none" placeholder="PROCENT" ng-model="state.percent[2]" autocomplete="off">
+                                    </div>
+                                    <div class="col-md-1">
+                                        <input type="number" class="form-control text-center bgm-none" placeholder="PROCENT" ng-model="state.percent[3]" autocomplete="off">
+                                    </div>
+                                    
                                     <div class="col-md-1">
                                         <button class="btn btn-primary bgm-red waves-effect" ng-click="removeState(day,state)"><i class="zmdi zmdi-delete"></i></button>
                                     </div>
