--- a/views/pomps/pomp3.html
+++ b/views/pomps/pomp3.html
@@ -24,9 +24,15 @@
                 </div>
                 <div class="card-body card-padding">
                     <div ng-show="modelState.on">
+                        <div class="row">
+                            <div class="col-sm-2 text-center">Dzien tygodnia</div>
+                            <div class="col-sm-1 text-center">Godzina</div>
+                            <div class="col-sm-8"></div>
+                            <div class="col-sm-1 text-center">PPM</div>
+                        </div>
                         <div class="row" ng-repeat="day in modelTimes">
                             <div class="col-xs-8 col-sm-2">
-                                <div class="checkbox m-b-15">
+                                <div class="checkbox m-b-15 ">
                                     <label>
                                         <input type="checkbox" ng-model="day.on">
                                         <i class="input-helper"></i> {{day.name}}
@@ -35,13 +41,13 @@
                             </div>
                             <div ng-show="day.on">
                                 <div class="col-xs-4 col-sm-1">
-                                    <input placeholder="Time" ng-model="day.time" class="f-15 form-control bgm-white">
+                                    <input placeholder="Time" ng-model="day.time" class="f-15 form-control bgm-white text-center">
                                 </div>
                                 <div class="col-xs-10 col-sm-8">
                                     <br>
-                                    <div slider class="input-slider m-b-25" data-is-color="blue" ng-model="day.dose" start=0 end=20 step="0.2"></div>
+                                    <div slider class="input-slider m-b-25 " data-is-color="blue" ng-model="day.dose" start=0 end=5 step="0.05"></div>
                                 </div>
-                                <div class="col-xs-2 col-sm-1">
+                                <div class="col-xs-2 col-sm-1 text-center">
                                     <h4>{{day.dose}}</h4>
                                 </div>
                             </div>
@@ -63,25 +69,31 @@
                 </div>
                 <div class="card-padding card-body">
                     <div class="row">
-                        <div class="col-sm-3 m-b-20">
+                        <div class="col-sm-2 m-b-20">
                             <div class="form-group fg-line">
-                                <label>WYDAJNOSC</label>
+                                <label>WYDAJNOSC S/ML</label>
                                 <input type="number" class="form-control ng-isolate-scope bgm-none" ng-model="modelState.ml_per_sec" placeholder="Wydajnośc ml/s" maxlength="3" autocomplete="off">
                             </div>
                         </div>
-                        <div class="col-sm-3 m-b-20">
+                        <div class="col-sm-2 m-b-20">
+                            <div class="form-group fg-line">
+                                <label>PPM / ML</label>
+                                <input type="number" class="form-control ng-isolate-scope bgm-none" ng-model="modelState.ppm_per_ml" placeholder="PPM/ML" autocomplete="off">
+                            </div>
+                        </div>
+                        <div class="col-sm-2 m-b-20">
                             <div class="form-group fg-line">
                                 <label>POJEMNOSC</label>
                                 <input type="number" class="form-control ng-isolate-scope bgm-none" placeholder="POJEMNOSC" ng-model="modelState.capacity" maxlength="4" autocomplete="off">
                             </div>
                         </div>
-                        <div class="col-sm-3 m-b-20">
+                        <div class="col-sm-2 m-b-20">
                             <div class="form-group fg-line">
                                 <label>STAN</label>
                                 <input type="number" disabled class="form-control ng-isolate-scope bgm-none" placeholder="STAN" ng-model="modelState.state">
                             </div>
                         </div>
-                        <div class="col-sm-3 m-b-20">
+                        <div class="col-sm-2 m-b-20">
                             <div class="form-group fg-line">
                                 <label>PROCENT</label>
                                 <input type="number" disabled class="form-control ng-isolate-scope bgm-none" placeholder="PROCENT" ng-model="modelState.percent">
